--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eye",
+  "name": "eyetracking",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.0",
+    "seeso": "^0.2.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
